@@ -5,6 +5,7 @@
 	* Added: RequestDecorator, ResponseDecorator.
 	* Added: A very simple HTTP client.
 	* Fixed: Not erroring on unknown HTTP status codes.
+	* Fixed: Throwing exceptions on invalid HTTP status codes (not 3 digits)
 
 2.0.0-alpha2 (2013-07-02)
 	* Added: Digest & AWS Authentication.
